--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <img src="logo.png" alt="logo_csi" class="logo_csi">
 
     <p>We at CSI simply strive for uplifting the computer science community, and even more so, we strive to make a positive impact on one another. We keep our core team closely knit and constantly come up with new ideas. Be it campaigns, events, study groups and what not.</p>
-
+    <P>
+    <p>HERE WE GO WE HAVE SINNED THE GAME, AND I KNOW FOR SURE, WE ARE HEAVEN SENT! SINNERS WE CAN ALL BE WINNERS, THEY WANT US TO BE THINNER THEY WANAA STICK MY DINNER </p>
     <p>Through our chapter, students get boundless opportunities and marvelous exposures beyond the confined textbook syllabi. It has been a successful journey for our chapter till date in the form of workshops, hackathons, learning weekends, competitions and educational visits, all of which with much more, continues to be delivered by us.</p>
 
   </section>
@@ -47,12 +48,13 @@
   <section id="skills">
 
     <h2>Skills</h2>
-
+    <h3>Education:</h1>
     <div class="skill-icons">
 
       <i class="fab fa-html5"></i>
       <i class="fab fa-css3-alt"></i>
       <i class="fab fa-js"></i>
+      <i class="fab fa-python"></i>
       <i class="fab fa-react"></i>
       <i class="fab fa-node"></i>
 
